simplq/src/components/pages/Admin/admin.module.scss
@import 'components/common.scss';

.admin-join-queue-form {
  justify-content: center;
  align-items: center;
  margin: 0;
  width: 100%;
  height: max-content;
}

.share {
  .button-background {
    background-color: $primary-color-dark;
    border-radius: 0.6rem;
  }

  .popper {
    background-color: #fff;
  }

  .share-button {
    display: flex;
  }

  .share-icon {
    margin-right: 2rem;
  }
}

.token-list {
  @include center-horizontally();
  max-width: 40rem;
  padding: 1rem;
  margin: 0 auto auto auto;
  display: flex;
  flex-direction: column;
}

.token {
  display: flex;
  flex-direction: row;
  align-items: stretch;

  border-radius: 0.6rem;
  border-top: 1px solid #cacaca;
  box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
    0 1px 5px 0 rgba(0, 0, 0, 0.12);

  width: 100%;

  margin: 1rem;
  padding: 0;

  &:hover {
    -webkit-box-shadow: 0 3px 18px -6px black;
    -moz-box-shadow: 0 3px 18px -6px black;
    box-shadow: 0 3px 18px -6px black;
  }

  .token-number {
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 0.4rem;
    min-width: 4rem;
    background: $primary-color-dark;

    & > p {
      margin: 0;
      font-weight: bold;
      font-size: 2rem;
      color: #fafafa;
    }
  }

  .token-details {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: stretch;

    width: 100%;
    margin-left: 1rem;

    .token-name-time {
      text-align: left;
      align-self: center;
      & > p {
        margin: 0;

        &:first-child {
          font-size: 0.75rem;
        }
        &:last-child {
          color: $primary-color-dark;
          font-weight: bold;
        }
      }
    }

    .token-operations {
      display: flex;
      flex-direction: row;
      align-items: stretch;

      .token-icon-set {
        display: flex;
        align-items: stretch;
        flex-wrap: wrap;
        .token-icon {
          color: $primary-color-dark;
        }
        .token-icon-disabled {
          color: #a8a8a8;
        }
      }

      .token-remove {
        background-color: lightcoral;
        margin: 0;
        padding: 0;
        border-radius: 0 0.6rem 0.6rem 0;
        cursor: pointer;

        border: 0.1rem solid $primary-color-dark;
        display: flex;
        align-items: center;
        justify-content: center;

        & > p {
          text-transform: uppercase;
          text-align: center;
          font-size: 0.75rem;
          font-weight: bold;
          color: $primary-color-dark;
          transform: rotate(-90deg);
        }
      }

      .token-remove-disabled {
        @extend .token-remove;
        background-color: #7a7676;
      }
    }
  }
}

.admin-content {
  min-height: 100vh;
  .header-title {
    .sub-header {
      display: flex;
      font-family: Pacifico, Arial, Helvetica, sans-serif;
      font-size: 0.8rem;
      font-weight: 300;
      color: #3a3768;
      align-items: center;
    }
  }

  .header-bar {
    @include background-color();
    padding: 1.5rem;
    padding-top: 4rem;
    display: flex;
    flex-wrap: wrap;

    .header {
      @include standard-header();
      font-size: 2.7rem;
      margin-bottom: 0;
      text-align: left;
    }

    .admin-button {
      padding: 0 0.1rem;
    }

    .main-button-group {
      @include center-horizontally();
      margin-right: 0;
      & > div {
        margin: 0.5rem;
      }
      @media screen and (max-width: 500px) {
        flex-direction: column;
        margin: 0 auto;
      }
    }
  }

  .main-body {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 3rem 6rem;
    @media screen and (max-width: 550px) {
      margin: 2rem;
    }
  }
}

